--- a/doclab.html
+++ b/doclab.html
@@ -3,7 +3,7 @@
 <body>
  <h1>Laboratorio Práctico - Semana 15</h1>
 
-<h2> Nombre y Apellido </h2>
+<h2> Carlos Muaricio Estrada Platero </h2>
 
 <h3> ESINTEC </h3>
 </body>
